--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.5",
     "@types/node": "^20.5.6",
     "dotenv": "^16.3.1",
     "formik": "^2.4.3",
